--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   --whitecolor: #ffffff;
   --adresscolor: #757575;
   --colortext: #000;
-  --darkgrey: #212121;
+  --darkgrey: hsl(0, 0%, 13%);
 }
 body {
   background: var(--whitecolor);
@@ -13,6 +13,10 @@ body {
   font-size: 14px;
   font-style: normal;
   color: var(--brand-color);
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
 }
 .logo {
   font-family: Raleway, sans-serif;
@@ -24,7 +28,15 @@ body {
   width: 145px;
   height: 31px;
   text-decoration: none;
+  padding: 24px 0 25px;
 }
+
+.logo-footer {
+  padding-top: 0;
+  padding-bottom: 20px;
+  display: inline-block;
+}
+
 .logo-text {
   color: var(--colortext);
 }
@@ -33,7 +45,7 @@ body {
 }
 .team,
 .about,
-.links,
+.portfolio-list,
 .work {
   list-style: none;
 }
@@ -46,15 +58,36 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
   list-style-type: none;
-
   color: var(--darkgrey);
+  box-sizing: border-box;
 }
 .nav-link:hover,
 .nav-link:focus {
   color: var(--brand-color);
 }
+.inline-block {
+  display: inline-block;
+}
+.header-nav {
+  margin-left: 93px;
+}
+
+.header-navigation li {
+  padding: 32px 0;
+}
+.header-navigation li + li {
+  padding-left: 50px;
+}
+
 .list {
   list-style-type: none;
+  box-sizing: border-box;
+  margin: 0;
+  padding-left: 0;
+  display: inline-block;
+}
+.list-inline li {
+  display: inline-block;
 }
 .list-street {
   font-style: normal;
@@ -67,6 +100,11 @@ body {
 .list-street:hover {
   color: var(--brand-color);
 }
+
+.footer .list li + li {
+  padding-top: 9px;
+}
+
 .list-adress {
   font-style: normal;
   text-decoration: none;
@@ -91,7 +129,10 @@ body {
   background: var(--brand-color);
   color: var(--whitecolor);
   border: none;
+  margin-top: 30px;
+  padding: 10px 32px;
 }
+
 .button:focus,
 .button:hover {
   cursor: pointer;
@@ -106,6 +147,9 @@ body {
   background: var(--whitecolor);
   color: var(--darkgrey);
   border: none;
+  background: #f5f4fa;
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 .button-filter:hover,
 .button-filter:focus {
@@ -115,9 +159,17 @@ body {
 }
 .buttons {
   list-style: none;
+  padding-top: 94px;
 }
+.filters {
+  padding-left: 0;
+  text-align: center;
+  margin-bottom: 56px;
+}
+
 .footer {
   background: var(--footercolor);
+  padding: 60px 0;
 }
 .links-title {
   font-weight: bold;
@@ -125,12 +177,14 @@ body {
   line-height: 36px;
   letter-spacing: 0.06em;
   color: var(--darkgrey);
+  margin: 20px 24px 4px;
 }
 .links-text {
   font-weight: normal;
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
+  margin: 4px 24px 20px;
 
   color: var(--adresscolor);
 }
@@ -142,16 +196,28 @@ body {
   text-decoration: none;
 }
 .hero {
+  padding: 200px 0;
   background-color: var(--footercolor);
+  text-align: center;
 }
 .hero-title {
   color: white;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 60px;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin: 0 auto;
+}
+
+.about {
+  margin: 94px auto;
+}
+
+.about li {
+  width: 270px;
 }
 .about-title {
   font-weight: bold;
@@ -168,7 +234,18 @@ body {
   letter-spacing: 0.03em;
   color: var(--adresscolor);
 }
+
+.work {
+  margin-bottom: 94px;
+}
+
+.comand {
+  background-color: #f5f4fa;
+  padding: 94px 0;
+}
 .worktitle {
+  margin-top: 0;
+  margin-bottom: 50px;
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
@@ -180,6 +257,7 @@ body {
 .worktitle:hover {
   list-style: none;
 }
+
 .team-name {
   font-weight: 500;
   font-size: 16px;
@@ -192,4 +270,24 @@ body {
   line-height: 19px;
   letter-spacing: 0.03em;
   color: var(--adresscolor);
+}
+.team li {
+  background: #fff;
+  text-align: center;
+}
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.portfolio-list {
+  padding-left: 0;
+  flex-wrap: wrap;
+  margin-bottom: 64px;
+}
+
+.portfolio-list li {
+  border: 1px solid #eeeeee;
+  margin-bottom: 30px;
 }
